--- a/IecProjectApp/app/src/main/res/values/strings.xml
+++ b/IecProjectApp/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="at">&#64;username</string>
+    <string name="logout">Sair</string>
+    <string name="talk">Conversar</string>
 
 
 </resources>
